# python-barcode

./: .coverage  .gitignore  .hgignore  .hgsigs  .pre-commit-config.yaml  .travis.yml  CONTRIBUTING.md  LICENCE  MANIFEST  MANIFEST.in  Pipfile  README  README.rst  crash-012f73d315021e6be7076623766ce8227b43f93c  crash-032e725706e2b66c9f6f0d5235d25633eed035d4  crash-1740a7fc45b4bf655e77ea813a509a9100b56f4f  crash-1e82d3c9ede2fde7cea7acf8d10b35667e146f8f  crash-35814ac86c44ff129b92df3d8bf4c3da36e401c7  crash-379c75bd7e01514a46e53e8f99ca90e63f25a92b  crash-4b755c824b15528d289f4507b72f6982f59ff834  crash-4ba9562f4aaef12d65f8d10f41551b88bbddf184  crash-558a8019a6144825a91b0a29e3b07b2da2a4460d  crash-58edf96db334b969e37b14bd3fb66d51202754f9  crash-8774c065f8691075d3aaa655b5128f808d18c355  crash-8eccd5040b0f54ac21e6e840ac43a47f95aac4c9  crash-9de1acfef9d4b384391aa8009182056556d4b989  crash-a5c2cdcf8d38c2dbd9ed6adcaf0a98c795c78743  crash-ca118198225f629c1fe2fda1c76234fa6024253e  crash-ef60dfe789e510445ef44f73d91aba04380893c4  crash-fd2658dbdbe115e2e4346e09c0022d645c21a2b5  publish-release.yaml  pyproject.toml  setup.cfg  setup.py  test.py  tox.ini
.github/: FUNDING.yml
.github/workflows/: checks.yml  fuzz_requirements-mayhem.yml  mayhem.yml  publish.yml  tests.yml
barcode/: .gitignore  __init__.py  addon_utils.py  base.py  codabar.py  codex.py  ean.py  errors.py  isxn.py  itf.py  pybarcode.py  upc.py  writer.py
barcode/_writer/: __init__.py  image.py  svg.py  writerbase.py
barcode/charsets/: addons.py  codabar.py  code128.py  code39.py  ean.py  itf.py  upc.py
barcode/writer/: __init__.py  image.py  svg.py  writerbase.py
docs/: Makefile  barcode.rst  changelog.rst  codes.rst  conf.py  contents.rst  getting-started.rst  index.rst  license.rst  make.bat  supported-formats.rst  writers.rst
docs/source/: barcode.rst  codes.rst  commandline.rst  conf.py  index.rst  license.rst
docs/source/writers/: image.rst  index.rst  svg.rst
docs/writers/: create_writer.rst  image.rst  index.rst  svg.rst
mayhem/: Dockerfile  Mayhemfile  build.sh  fuzz_barcode.py  fuzz_requirements.mayhemfile  fuzz_requirements.pkg.mayhemfile  fuzz_requirements.py
tests/: test_Gs1_128.py  test_addon.py  test_builds.py  test_checksums.py  test_ean.py  test_init.py  test_manually.py  test_scannability.py  test_with_pyzbar.py  test_writers.py
